--- a/Morphological_image_analyzer/Morphological_image_analyzer/MainWindow.xaml
+++ b/Morphological_image_analyzer/Morphological_image_analyzer/MainWindow.xaml
@@ -8,16 +8,16 @@
         Title="Analizator morfologiczny obrazów" Height="450" Width="1000" ResizeMode="NoResize">
     <Grid Background="#FFBFBFBF">
         <Canvas Name="oryginalCanvas" HorizontalAlignment="Left" Height="260" Margin="39,67,0,0" VerticalAlignment="Top" Width="260" Background="White">
-            <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="260" VerticalAlignment="Top" Width="260"/>
+            <Border Name="originalBorder" BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="260" VerticalAlignment="Top" Width="260"/>
         </Canvas>
         <Canvas Name="analizedCanvas" HorizontalAlignment="Left" Height="260" Margin="321,67,0,0" VerticalAlignment="Top" Width="260" Background="White">
-            <Border BorderBrush="Black" BorderThickness="1" Height="260" Width="260"/>
+            <Border Name="analizedBorder" BorderBrush="Black" BorderThickness="1" Height="260" Width="260"/>
         </Canvas>
         <Label Content="Oryginalny obraz" HorizontalAlignment="Left" Margin="39,25,0,0" VerticalAlignment="Top" Width="260" FontWeight="Bold" FontSize="20"/>
         <Label Content="Analizowany obraz" HorizontalAlignment="Left" Margin="321,25,0,0" VerticalAlignment="Top" Width="200" FontWeight="Bold" FontSize="20"/>
-        <Button Content="Ustaw jako oryginalny" HorizontalAlignment="Left" Margin="321,332,0,0" VerticalAlignment="Top" Width="149" Height="45"/>
+        <Button Content="Ustaw jako oryginalny" HorizontalAlignment="Left" Margin="321,332,0,0" VerticalAlignment="Top" Width="149" Height="45" Click="setAsOriginal_Click"/>
         <Label Content="Dostępne przekształcenia morfologiczne" HorizontalAlignment="Left" Margin="651,96,0,0" VerticalAlignment="Top" Height="25" Width="242" FontWeight="Bold"/>
-        <Button Content="Wyczyść" HorizontalAlignment="Left" Margin="476,332,0,0" VerticalAlignment="Top" Width="105" Height="45"/>
+        <Button Content="Wyczyść" HorizontalAlignment="Left" Margin="476,332,0,0" VerticalAlignment="Top" Width="105" Height="45" Click="clearAnalized_Click"/>
         <Label Content="Dodawanie obiektów do analizowanego obrazu" HorizontalAlignment="Left" Margin="634,10,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
         <Button HorizontalAlignment="Left" Margin="680,41,0,0" VerticalAlignment="Top" Width="50" Height="50" Click="addSquere_Click">
             <Rectangle Fill="#FFF4F4F5" Height="30" Stroke="Black" Width="30"/>
