--- a/Morphological_image_analyzer/Morphological_image_analyzer/MainWindow.xaml
+++ b/Morphological_image_analyzer/Morphological_image_analyzer/MainWindow.xaml
@@ -29,10 +29,11 @@
         <Button HorizontalAlignment="Left" Margin="820,41,0,0" VerticalAlignment="Top" Width="50" Height="50" Click="addLine_Click">
             <Rectangle Fill="#FFF4F4F5" Height="1" Stroke="Black" Width="30"/>
         </Button>
-        <Button Content="Dylacja" HorizontalAlignment="Left" Margin="680,126,0,0" VerticalAlignment="Top" Width="50" Height="40" Click="performDilation_Click"/>
-        <Button Content="Erozja" HorizontalAlignment="Left" Margin="680,183,0,0" VerticalAlignment="Top" Width="50" Height="40" Click="performErosion_Click"/>
-        <Button Content="Dylacja erozji" HorizontalAlignment="Left" Margin="786,126,0,0" VerticalAlignment="Top" Width="84" Height="40" Click="performDilationOfErosion_Click"/>
-        <Button Content="Erozja dylacji" HorizontalAlignment="Left" Margin="786,183,0,0" VerticalAlignment="Top" Width="84" Height="40" Click="performErosionOfDilation_Click"/>
+        <Button Content="Konfiguruj element strukturalny" HorizontalAlignment="Left" Margin="680,130,0,0" VerticalAlignment="Top" Width="190" Height="40" Click="configureKernel_Click"/>
+        <Button Content="Dylacja" HorizontalAlignment="Left" Margin="662,190,0,0" VerticalAlignment="Top" Width="84" Height="40" Click="performDilation_Click"/>
+        <Button Content="Erozja" HorizontalAlignment="Left" Margin="809,190,0,0" VerticalAlignment="Top" Width="84" Height="40" Click="performErosion_Click"/>
+        <Button Content="Dylacja erozji" HorizontalAlignment="Left" Margin="662,244,0,0" VerticalAlignment="Top" Width="84" Height="40" Click="performDilationOfErosion_Click"/>
+        <Button Content="Erozja dylacji" HorizontalAlignment="Left" Margin="809,244,0,0" VerticalAlignment="Top" Width="84" Height="40" Click="performErosionOfDilation_Click"/>
 
     </Grid>
 </Window>
