--- a/Morphological_image_analyzer/Morphological_image_analyzer/ModalWindow.xaml
+++ b/Morphological_image_analyzer/Morphological_image_analyzer/ModalWindow.xaml
@@ -7,7 +7,8 @@
         mc:Ignorable="d"
         Title="Zarządzanie elementem strukturalnym" Height="450" Width="800">
     <Grid>
-        <TextBox x:Name="txtSomeBox" PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="250,10,0,0" VerticalAlignment="Top" Width="30" Height="20"/>
-        <Button x:Name="btnSaveData" Content="Ustaw rozmiar" HorizontalAlignment="Left" Margin="350,10,0,0" VerticalAlignment="Top" Width="100" Height="20" Click="btnSaveData_Click"/>
+        <TextBox x:Name="kernelSize" PreviewTextInput="numberValidationTextBox" HorizontalAlignment="Left" Margin="250,10,0,0" VerticalAlignment="Top" Width="30" Height="20"/>
+        <Button x:Name="setKernelSize" Content="Ustaw rozmiar" HorizontalAlignment="Left" Margin="350,10,0,0" VerticalAlignment="Top" Width="100" Height="20" Click="setKernelSize_Click"/>
+        <StackPanel x:Name="stackPanel"/>
     </Grid>
 </Window>
