--- a/Morphological_image_analyzer/Morphological_image_analyzer/ModalWindow.xaml
+++ b/Morphological_image_analyzer/Morphological_image_analyzer/ModalWindow.xaml
@@ -9,6 +9,6 @@
     <Grid>
         <TextBox x:Name="kernelSize" PreviewTextInput="numberValidationTextBox" HorizontalAlignment="Left" Margin="250,10,0,0" VerticalAlignment="Top" Width="30" Height="20"/>
         <Button x:Name="setKernelSize" Content="Ustaw rozmiar" HorizontalAlignment="Left" Margin="350,10,0,0" VerticalAlignment="Top" Width="100" Height="20" Click="setKernelSize_Click"/>
-        <StackPanel x:Name="stackPanel"/>
+        <StackPanel x:Name="stackPanel" Margin="0,40,0,0"/>
     </Grid>
 </Window>
