--- a/Morphological_image_analyzer/Morphological_image_analyzer/MainWindow.xaml
+++ b/Morphological_image_analyzer/Morphological_image_analyzer/MainWindow.xaml
@@ -32,8 +32,10 @@
         <Button Content="Konfiguruj element strukturalny" HorizontalAlignment="Left" Margin="680,130,0,0" VerticalAlignment="Top" Width="190" Height="40" Click="configureKernel_Click"/>
         <Button Content="Dylacja" HorizontalAlignment="Left" Margin="662,190,0,0" VerticalAlignment="Top" Width="84" Height="40" Click="performDilation_Click"/>
         <Button Content="Erozja" HorizontalAlignment="Left" Margin="809,190,0,0" VerticalAlignment="Top" Width="84" Height="40" Click="performErosion_Click"/>
-        <Button Content="Dylacja erozji" HorizontalAlignment="Left" Margin="662,244,0,0" VerticalAlignment="Top" Width="84" Height="40" Click="performDilationOfErosion_Click"/>
-        <Button Content="Erozja dylacji" HorizontalAlignment="Left" Margin="809,244,0,0" VerticalAlignment="Top" Width="84" Height="40" Click="performErosionOfDilation_Click"/>
+        <Button Content="Dylacja erozji" HorizontalAlignment="Left" Margin="662,245,0,0" VerticalAlignment="Top" Width="84" Height="40" Click="performDilationOfErosion_Click"/>
+        <Button Content="Erozja dylacji" HorizontalAlignment="Left" Margin="809,245,0,0" VerticalAlignment="Top" Width="84" Height="40" Click="performErosionOfDilation_Click"/>
+        <Button Content="Granica zew." HorizontalAlignment="Left" Margin="662,300,0,0" VerticalAlignment="Top" Width="84" Height="40" Click="performEdgesWithDilation_Click"/>
+        <Button Content="Granica wew." HorizontalAlignment="Left" Margin="809,300,0,0" VerticalAlignment="Top" Width="84" Height="40" Click="performEdgesWithErosion_Click"/>
 
     </Grid>
 </Window>
