--- a/Morphological_image_analyzer/Morphological_image_analyzer/ModalWindowAnaliseResult.xaml
+++ b/Morphological_image_analyzer/Morphological_image_analyzer/ModalWindowAnaliseResult.xaml
@@ -7,7 +7,12 @@
         mc:Ignorable="d"
         Title="ModalWindowAnaliseResult" Height="250" Width="500">
     <Grid>
-        <Label Name="analizingLabel" Content="Trwa analizowanie obrazu..." HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" FontSize="20"/>
-
+        <Button Content="Rozpocznij analizę" Margin="0,10,0,0" HorizontalAlignment="Center" VerticalAlignment="Top" Width="125" Click="startAnalize_Click"/>
+        <Grid VerticalAlignment="Center" Width="300">
+            <Label Name="countOfAllObjects" Margin="0,0,0,0" Content="Liczba wszystkich obiektów: " HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="13"/>
+            <Label Name="countOfAllObjectsValue" Margin="0,0,0,0" HorizontalAlignment="Right" VerticalAlignment="Top" FontSize="13"/>
+            <Label Name="countOfObjectsWithOnePointLine" Margin="0,20,0,0" Content="Liczba obiektów z liniami jednopikselowymi: " HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="13"/>
+            <Label Name="countOfObjectsWithOnePointLineValue" Margin="0,20,0,0" HorizontalAlignment="Right" VerticalAlignment="Top" FontSize="13"/>
+        </Grid>
     </Grid>
 </Window>
